--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-FACEBOOK_ID=
-FACEBOOK_SECRET=
+FACEBOOK_ID=SKIP
+FACEBOOK_SECRET=SKIP
 FACEBOOK_CALLBACK=http://localhost:3000/auth/facebook/callback
-SESSION_SECRET=
+SESSION_SECRET=MyRestaurantSession
 MONGODB_URI=mongodb://localhost/restaurant-list
 PORT=3000
